[fix] update to latest docker engine command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,8 +61,8 @@ jobs:
           script_stop: true
           script: |
             cd ~
-            sudo docker-compose pull
-            sudo docker-compose up -d
+            sudo docker compose pull
+            sudo docker compose up -d
             sudo docker image prune -f
       -
         name: Remove Github Actions IP from Security Group
