--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -26,4 +26,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: rlatmdxo50/work-unity-server:latest
+          tags: rlatmdxo50/work-unity-server:dev
