[fix] main workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,20 +27,15 @@ jobs:
           context: .
           push: true
           tags: rlatmdxo50/work-unity-server:latest
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment: production
     steps:
       -
         name: Get Github Actions IP
         id: ip
         uses: haythem/public-ip@v1.3
       -
-        name: Checkout
-        uses: actions/checkout@v3
-      - 
         name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -49,7 +44,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
       -
         name: Add Github Actions IP to Security Group
-        uses: |
+        run: |
           aws ec2 authorize-security-group-ingress --group-id ${{ secrets.AWS_SECURITY_GROUP_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
       -
         name: Connect to EC2 Instance via SSH and Run Docker 
@@ -66,5 +61,5 @@ jobs:
             sudo docker image prune -f
       -
         name: Remove Github Actions IP from Security Group
-        uses: |
+        run: |
           aws ec2 revoke-security-group-ingress --group-id ${{ secrets.AWS_SECURITY_GROUP_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
