--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,12 @@
-name: Build Server Image
+# Since this is an portfolio project, just build all as a latest image
+
+name: Build
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: 
+      - develop
+      - main
 
 jobs:
   build:
@@ -24,6 +28,18 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./Dockerfile
           push: true
-          tags: rlatmdxo50/work-unity-server:dev
+          tags: rlatmdxo50/work-unity-server:latest
+
+  trigger-deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - 
+        name: Trigger Deployment
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.PAT }}
+          repository: rlatmdxo50/work-unity
+          event-type: deploy-event
