--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,13 @@
-name: Build & Deploy Server Image
+name: Deploy
 
 on:
-  push:
-    branches: [ "main" ]
+  repository_dispatch:
+    types:
+      - deploy-event
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v3
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: rlatmdxo50/work-unity-server:latest
   deploy:
     runs-on: ubuntu-latest
-    needs: build
     steps:
       -
         name: Get Github Actions IP
