--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ lerna-debug.log*
 *.sublime-workspace
 
 # IDE - VSCode
+.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -36,3 +37,4 @@ lerna-debug.log*
 
 *.env
 *.pem
+*.pre-commit-config.yaml
