--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "work-unity",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Seungtae Kim <rlatmdxo50@gmail.com>",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -28,7 +28,7 @@
     "@nestjs/core": "^10.3.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "^10.0.1",
     "@sideway/address": "^5.0.0",
@@ -56,8 +56,8 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/cli": "^10.3.0",
+    "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.0.0",
     "@swc/cli": "^0.1.63",
     "@swc/core": "^1.3.102",
@@ -70,7 +70,10 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "husky": "^8.0.0",
     "jest": "^29.5.0",
+    "nestjs-spelunker": "^1.3.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
@@ -78,8 +81,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "husky": "^8.0.0"
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
