--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.489.0",
+    "@aws-sdk/client-s3": "^3.511.0",
     "@faker-js/faker": "^8.3.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
@@ -33,7 +33,6 @@
     "@nestjs/typeorm": "^10.0.1",
     "@sideway/address": "^5.0.0",
     "@sideway/formula": "^3.0.1",
-    "@types/multer": "^1.4.11",
     "@types/passport-jwt": "^3.0.13",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -43,6 +42,7 @@
     "joi": "^17.12.0",
     "moment-timezone": "^0.5.44",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nest-winston": "^1.9.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -63,6 +63,8 @@
     "@swc/core": "^1.3.102",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
+    "@types/multer-s3": "^3.0.3",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
